# smart-menu-ai

./: pyproject.toml
app/: api.py  chat.py  integrate.py  models.py
