[tool.poetry]
name = "smart-menu-ai"
version = "0.1.0"
description = ""
authors = ["Rary Coringa <rary.goncalves.123@ufrn.edu.br>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {version = ">=0.115.0,<0.116.0", extras = ["standard"]}
